--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "commander": "^12.1.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
     "@eslint/js": "^9.10.0",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.13",
@@ -37,6 +38,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.5.0"
   }
