--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bignumber.js": "^9.1.2",
     "commander": "^12.1.0"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.5.0"
   }
